Submit primary and mito assemblies